--- a/test/users.yml
+++ b/test/users.yml
@@ -1,2 +1,4 @@
-
-admin: $2a$12$O3HDh/q5vru8ZBd0LTNwVeU4/wvo5YItRXtEMXjzB7gpg2ZxuDHKe
+---
+admin: "$2a$12$O3HDh/q5vru8ZBd0LTNwVeU4/wvo5YItRXtEMXjzB7gpg2ZxuDHKe"
+robert: "$2a$12$A7e4Vjd4gSWf33cw5hKIxes5O9SOAyYo0ikb61MvhvxCKycTx6xkm"
+sunny: "$2a$12$AtySKwzmZ3jHjupbJ3r2TOvXd4GYQD.3eORP/WcPGdi.6pSiE.KkS"
